--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -2,10 +2,18 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
 
-    <com.tuacy.sectionpin.SectionPinListView
-        android:id="@+id/list_section_pin"
+    <com.andview.refreshview.XRefreshView
+        android:id="@+id/refresh_alarm_install_current"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <com.tuacy.sectionpin.SectionPinListView
+            android:id="@+id/list_section_pin"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </com.andview.refreshview.XRefreshView>
+
 </RelativeLayout>
